[gd_scene load_steps=16 format=3 uid="uid://q6cxglh3ahep"]

[ext_resource type="Texture2D" uid="uid://l5v3kbwcpe1l" path="res://assets/Border.png" id="1_8xilh"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="Texture2D" uid="uid://wka32lq2a6hj" path="res://assets/Background.png" id="1_yxuok"]
[ext_resource type="Texture2D" uid="uid://ko48t4t62axo" path="res://assets/Pattern03.png" id="4_jyhfs"]
[ext_resource type="Script" path="res://scripts/ceiling.gd" id="5_tbgi4"]
[ext_resource type="Script" path="res://scripts/deathplane.gd" id="6_tefeu"]
[ext_resource type="PackedScene" uid="uid://dhs7kwdbbejk4" path="res://scenes/pause_menu.tscn" id="7_o6xl0"]
[ext_resource type="FontFile" uid="uid://eh43j86udm7i" path="res://Qilkabold-DO6BR.otf" id="8_wxjoi"]

[sub_resource type="Animation" id="Animation_37q4v"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_a0mu7"]
resource_name = "controls_fade"
length = 5.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(3.1, 5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(3.1, 5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(3.13333, 5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(3.13333, 5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gljjf"]
_data = {
"RESET": SubResource("Animation_37q4v"),
"controls_fade": SubResource("Animation_a0mu7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(1290, 88.9999)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(20, 756)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(428, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefeu"]
size = Vector2(1611, 20)

[node name="main" type="Node"]
script = ExtResource("1_sugp2")
metadata/_edit_vertical_guides_ = [792.0]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../controls")
libraries = {
"": SubResource("AnimationLibrary_gljjf")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Border" type="TextureRect" parent="."]
offset_left = -256.0
offset_top = -496.0
offset_right = 1814.0
offset_bottom = 3474.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_8xilh")

[node name="Background" type="TextureRect" parent="Border"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -774.5
offset_top = -1483.5
offset_right = 774.5
offset_bottom = 1483.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yxuok")

[node name="floor" type="StaticBody2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(-3, 384.1)
scale = Vector2(0.2, 0.2)
shape = SubResource("RectangleShape2D_sugp2")

[node name="TextureRect" type="TextureRect" parent="floor"]
offset_left = -132.0
offset_top = 372.0
offset_right = 1158.0
offset_bottom = 477.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_jyhfs")
expand_mode = 1

[node name="walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2(-203, 8)
shape = SubResource("RectangleShape2D_jyhfs")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="walls"]
position = Vector2(208, 8)
shape = SubResource("RectangleShape2D_jyhfs")

[node name="ceiling" type="Area2D" parent="."]
collision_layer = 21
collision_mask = 21
script = ExtResource("5_tbgi4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ceiling"]
position = Vector2(3, -380)
shape = SubResource("RectangleShape2D_tbgi4")

[node name="deathplane" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7
script = ExtResource("6_tefeu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="deathplane"]
position = Vector2(59.5, 452)
shape = SubResource("RectangleShape2D_tefeu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("7_o6xl0")]
offset_top = -1.0
offset_bottom = -1.0

[node name="controls" type="Label" parent="."]
offset_left = -99.0
offset_top = -524.0
offset_right = 114.0
offset_bottom = -423.0
theme_override_fonts/font = ExtResource("8_wxjoi")
text = "Controls:
arrow keys: move & rotate
shift key: precise movement
space: slam down
esc: pause"

[node name="event_label" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Next Event: 5s"
metadata/time_left = 5

[node name="TwentySecTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="OneSecTimer" type="Timer" parent="."]

[node name="win" type="Label" parent="."]
visible = false
offset_left = -108.0
offset_top = -276.0
offset_right = 140.0
offset_bottom = -217.0
theme_override_fonts/font = ExtResource("8_wxjoi")
theme_override_font_sizes/font_size = 50
text = "YOU WIN!!"

[node name="EventTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="current_event" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -48.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Current Event: none"

[connection signal="body_exited" from="ceiling" to="ceiling" method="_on_body_exited"]
[connection signal="body_entered" from="deathplane" to="deathplane" method="_on_body_entered"]
[connection signal="timeout" from="TwentySecTimer" to="." method="_on_twenty_sec_timer_timeout"]
[connection signal="timeout" from="OneSecTimer" to="." method="_on_one_sec_timer_timeout"]
[connection signal="timeout" from="EventTimer" to="." method="_on_event_timer_timeout"]
